[project]
name = "obx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chonkie[model2vec]>=1.5.4",
    "duckduckgo-mcp-server>=0.1.1",
    "markitdown[pdf]>=0.1.4",
    "pydantic-ai>=1.52.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "questionary>=2.1.1",
    "rich>=14.3.2",
    "sentence-transformers>=5.2.2",
    "txtai>=9.4.1",
    "typer>=0.21.1",
]

[project.scripts]
obx = "obx.cli.main:app"

[tool.uv]
package = true
